[workspace]
members = [
    'node',
    'runtime/tinkernet',
   # 'runtime/brainstorm',

   'modified-construct-runtime',
]

[workspace.package]
version = "1.5.0"
edition = "2021"

license = "GPL-3.0"
authors = ["InvArch Association <https://github.com/InvArch>"]
repository = "https://github.com/InvArch/InvArch-Node/"
homepage = "https://invarch.network"

[profile.release]
panic = 'unwind'

[patch.'https://github.com/arrudagates/open-runtime-module-library']
orml-tokens2 = { package = "orml-tokens", git = "https://github.com/moonbeam-foundation//open-runtime-module-library", branch = "upgrade-to-polkadot-v1.1.0" }
orml-traits2 = { package = "orml-traits", git = "https://github.com/moonbeam-foundation//open-runtime-module-library", branch = "upgrade-to-polkadot-v1.1.0" }

[patch.'https://github.com/open-web3-stack/open-runtime-module-library']
orml-xcm = { git = "https://github.com/moonbeam-foundation/open-runtime-module-library", branch = "upgrade-to-polkadot-v1.1.0" }
orml-vesting = { git = "https://github.com/moonbeam-foundation/open-runtime-module-library", branch = "upgrade-to-polkadot-v1.1.0" }
orml-xtokens = { git = "https://github.com/moonbeam-foundation/open-runtime-module-library", branch = "upgrade-to-polkadot-v1.1.0" }
orml-xcm-support = { git = "https://github.com/moonbeam-foundation/open-runtime-module-library", branch = "upgrade-to-polkadot-v1.1.0" }
orml-unknown-tokens = { git = "https://github.com/moonbeam-foundation/open-runtime-module-library", branch = "upgrade-to-polkadot-v1.1.0" }
orml-currencies = { git = "https://github.com/moonbeam-foundation/open-runtime-module-library", branch = "upgrade-to-polkadot-v1.1.0" }
orml-traits = { git = "https://github.com/moonbeam-foundation/open-runtime-module-library", branch = "upgrade-to-polkadot-v1.1.0" }
orml-tokens = { git = "https://github.com/moonbeam-foundation/open-runtime-module-library", branch = "upgrade-to-polkadot-v1.1.0" }
orml-asset-registry = { git = "https://github.com/moonbeam-foundation/open-runtime-module-library", branch = "upgrade-to-polkadot-v1.1.0" }

[patch."https://github.com/Moonsong-Labs/moonkit"]
pallet-maintenance-mode = { git = "https://github.com/Moonsong-Labs//moonkit", branch = "moonbeam-polkadot-v1.1.0" }