[package]
authors = ['InvArchitects <https://github.com/InvArch>']
description = 'DEV Pallet for initializing and managing a decentralized entrepreneurial venture (DEV)'
edition = '2018'
homepage = 'https://invarch.io'
license = 'GPLv3'
name = 'pallet-dev'
repository = 'https://github.com/InvArch/InvArch-Pallet-Library/dev'
version = '0.1.0-dev'

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", default-features = false }

# InvArch dependencies
primitives = { package = "invarch-primitives", path = "../primitives", default-features = false }
ips = { package = "pallet-ips", path = "../ips", default-features = false }
ipo = { package = "pallet-ipo", path = "../ipo", default-features = false }


[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-09+1' }
sp-io = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-09+1' }
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1', version = '4.0.0-dev' }
ipt = { package = "pallet-ipt", path = "../ipt", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
]
try-runtime = ["frame-support/try-runtime"]
