[workspace]
members = [
    'node',
    'runtime',
]

[workspace.package]
version = "1.1.1"
edition = "2021"

license = "GPL-3.0"
authors = ["InvArch Association <https://github.com/InvArch>"]
repository = "https://github.com/InvArch/InvArch-Node/"
homepage = "https://invarch.network"



[profile.release]
panic = 'unwind'
